--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
+    "@heroicons/react": "^2.2.0",
     "aws-amplify": "^6.13.1",
     "next": "15.1.7",
     "react": "^19.0.0",
