--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx scripts/seed.ts"
+    "seed": "tsx scripts/seed.ts",
+    "generate-qr": "tsx scripts/setup-test-bin.ts",
+    "open-scan": "node scripts/open-scan.js"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
     "@heroicons/react": "^2.2.0",
     "aws-amplify": "^6.13.1",
+    "jspdf": "^3.0.0",
     "next": "15.1.7",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
@@ -23,9 +26,12 @@
     "@aws-amplify/backend": "^1.14.1",
     "@aws-amplify/backend-cli": "^1.4.11",
     "@eslint/eslintrc": "^3",
+    "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "aws-cdk": "^2.1000.2",
     "aws-cdk-lib": "^2.180.0",
     "constructs": "^10.4.2",
@@ -33,10 +39,12 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "uuid": "^11.1.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "type": "module",
