--- a/amplify/tsconfig.json
+++ b/amplify/tsconfig.json
@@ -1,31 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "module": "commonjs",
-    "lib": ["es2018"],
-    "declaration": true,
-    "strict": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": false,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "experimentalDecorators": true,
-    "strictPropertyInitialization": false,
-    "typeRoots": ["../node_modules/@types", "./layers/manage-users/nodejs/node_modules/@types"],
+    "target": "es2022",
+    "module": "es2022",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
-    "baseUrl": ".",
     "paths": {
-      "@manage-users": ["./layers/manage-users/nodejs/src"]
-    },
-    "types": ["node"]
-  },
-  "include": ["functions/**/src/**/*.ts", "layers/**/src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+      "$amplify/*": ["../.amplify/generated/*"],
+      "@manage-users": ["./layers/manage-users/src"]
+    }
+  }
 }
