--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "dev": "next dev",
     "deploy": "npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID",
     "build": "next build",
+    "build:layers": "yarn --cwd amplify/layers/manage-users run build:layer",
     "start": "next start",
     "lint": "next lint",
-    "seed": "tsx scripts/seed.ts",
-    "generate-qr": "tsx scripts/setup-test-bin.ts",
-    "open-scan": "node scripts/open-scan.js"
+    "seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
@@ -26,6 +25,9 @@
     "@aws-amplify/backend": "^1.14.1",
     "@aws-amplify/backend-cli": "^1.4.11",
     "@eslint/eslintrc": "^3",
+    "@types/aws-lambda": "^8.10.147",
+    "@types/estree": "^1.0.6",
+    "@types/json-schema": "^7.0.15",
     "@types/jspdf": "^2.0.0",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.5",
