--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.9.1",
+    "@aws-amplify/ui-react-storage": "^3.8.2",
     "@heroicons/react": "^2.2.0",
     "aws-amplify": "^6.13.1",
     "jspdf": "^3.0.0",
