--- a/amplify.yaml
+++ b/amplify.yaml
@@ -3,8 +3,11 @@ backend:
   phases:
     build:
       commands:
+        - rm -rf node_modules
         - yarn install --frozen-lockfile
-        - yarn build:layers
+        - cd $CODEBUILD_SRC_DIR/amplify/layers/manage-users
+        - yarn build:layer
+        - cd $CODEBUILD_SRC_DIR
         - yarn ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
