--- a/amplify/layers/manage-users/package.json
+++ b/amplify/layers/manage-users/package.json
@@ -10,11 +10,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "aws-sdk": "^2.1499.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.126",
     "@types/node": "^20.9.0",
-    "aws-sdk": "^2.1499.0",
     "typescript": "^5.2.2"
   },
   "author": "",
