--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "sandbox": "npx ampx sandbox",
     "deploy": "npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID",
     "build": "next build",
     "build:layers": "yarn --cwd amplify/layers/manage-users run build:layer",
